Preparing for Flyway, part 4
Updated UserRequestDTO validation

Added custom validation constraints to check if the given email and username already exist

Fixed email and password validation constraints logic and tests